Added ginger-beef.html ingredients section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Odin Recipes</h1>
         
         <p><a href="recipes/beef-stew.html">Beef Stew</a></p>
-
+        <p><a href="recipes/ginger-beef.html">Stir-Fried Ginger Broccoli Beef</a></p>
 </body>
 </html>
