--- a/recipes/beef-stew.html
+++ b/recipes/beef-stew.html
@@ -3,7 +3,7 @@
 <p><h2>Description</h2></p>
     <p> This classic stick-to-your-ribs stew is the ideal project for a chilly weekend. Beef, onion, carrots, potatoes and red wine come together in cozy harmony. If you are feeding a crowd, good news: It doubles (or triples) beautifully.</p>
     <p>This recipe will guide you through the easiest and most hands-off meal youve ever prepared in your life</p>
-    <p><h3>Ingredients You Will Need</h3></p>
+    <p><h3>Ingredients</h3></p>
     <ul>
         <li>¼ cup all-purpose flour</li>
         <li>¼teaspoon freshly ground pepper</li>
@@ -18,7 +18,7 @@
         <li>2large baking potatoes, peeled and cut into ¾-inch cubes</li>
         <li>2teaspoons salt</li>
     </ul>
-    <p><h3>Cooking Instructions</h3></p>
+    <p><h3>Steps</h3></p>
     <ol>
         <li><strong>Step 1:</strong> Combine the flour and pepper in a bowl, add the beef and toss to coat well. Heat 3 teaspoons of the oil in a large pot. Add the beef a few pieces at a time; do not overcrowd. Cook, turning the pieces until beef is browned on all sides, about 5 minutes per batch; add more oil as needed between batches.</li>
         <li><strong>Step 2:</strong> Remove the beef from the pot and add the vinegar and wine. Cook over medium-high heat, scraping the pan with a wooden spoon to loosen any browned bits. Add the beef, beef broth and bay leaves. Bring to a boil, then reduce to a slow simmer.</li>
