Fixed hyperlink to french onion soup page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         
         <p><a href="recipes/beef-stew.html">Beef Stew</a></p>
         <p><a href="recipes/ginger-beef.html">Stir-Fried Ginger Broccoli Beef</a></p>
+        <p><a href="recipes/french-onion-soup.html">French Onion Soup</a></p>
 </body>
 </html>
