Added background/font color to homepage, trouble with css on other pages

--- a/recipes/ginger-beef.html
+++ b/recipes/ginger-beef.html
@@ -1,10 +1,13 @@
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <h1>Stir-Fried Ginger Broccoli Beef</h1>
 <img src="images/ginger-beef.jpg">
-<p><h2>Description</h2></p>
-    <p>Ginger broccoli beef is a delectable stir-fry dish that combines tender strips of beef with crisp broccoli florets, all bathed in a savory ginger-infused sauce. This dish is a harmonious fusion of flavors and textures that has become a favorite in both Chinese and Western cuisines. The key to its irresistible appeal lies in the perfect balance of ingredients.</p>
+<p class="main"><h2>Description</h2></p>
+    <p id="main">Ginger broccoli beef is a delectable stir-fry dish that combines tender strips of beef with crisp broccoli florets, all bathed in a savory ginger-infused sauce. This dish is a harmonious fusion of flavors and textures that has become a favorite in both Chinese and Western cuisines. The key to its irresistible appeal lies in the perfect balance of ingredients.</p>
     <p>Beyond its delicious taste, ginger broccoli beef also boasts health benefits. Ginger is renowned for its anti-inflammatory properties and digestive aids, making it a therapeutic addition to the dish. Meanwhile, broccoli is a nutritional powerhouse, packed with vitamins, fiber, and antioxidants. When combined with lean beef, it provides a balanced meal that is both indulgent and nutritious. Whether served over a bed of steamed rice or alongside noodles, ginger broccoli beef is a versatile and crowd-pleasing option, suitable for both weeknight dinners and special occasions. Its enticing aroma and the perfect interplay of flavors ensure that this dish remains a beloved classic in the world of culinary delights.</p>
     <p><h3>Ingredients</h3></p>
-    <ul>
+    <p><ul>
         <li>7 ounces beef sirloin, sliced into strips</li>
         <li>1 ¼ teaspoons chicken bouillon granules, divided</li>
         <li>1 teaspoon white sugar, divided</li>
@@ -14,7 +17,7 @@
         <li>2 tablespoons vegetable oil, divided</li>
         <li>1 (4 inch) piece ginger root, peeled and sliced</li>
         <li>14 ounces Chinese broccoli, sliced</li>
-    </ul>
+    </ul></p>
     <ol>
         <li><strong>Step 1:</strong> Toss beef strips with 1 teaspoon chicken bouillon granules and 3/4 teaspoon sugar in a bowl. Marinate in the refrigerator, 20 minutes to 1 hour.</li>
         <li><strong>Step 2:</strong> Combine remaining 1/4 teaspoon chicken bouillon granules, 1/4 teaspoon sugar, and ginger juice in a bowl.</li>
