fixed css issue by adding styles.css file to recipes directory

--- a/recipes/beef-stew.html
+++ b/recipes/beef-stew.html
@@ -1,10 +1,20 @@
-<h1>Beef Stew</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <h1>Beef Stew</h1>
 <img src="./images/beef-stew-img.jpeg">
 <p><h2>Description</h2></p>
-    <p> This classic stick-to-your-ribs stew is the ideal project for a chilly weekend. Beef, onion, carrots, potatoes and red wine come together in cozy harmony. If you are feeding a crowd, good news: It doubles (or triples) beautifully.</p>
-    <p>This recipe will guide you through the easiest and most hands-off meal youve ever prepared in your life</p>
+    <p class="maintext"> This classic stick-to-your-ribs stew is the ideal project for a chilly weekend. Beef, onion, carrots, potatoes and red wine come together in cozy harmony. If you are feeding a crowd, good news: It doubles (or triples) beautifully.</p>
+    <p class="maintext"> This recipe will guide you through the easiest and most hands-off meal youve ever prepared in your life</p>
     <p><h3>Ingredients</h3></p>
-    <ul>
+    <p><ul>
         <li>¼ cup all-purpose flour</li>
         <li>¼teaspoon freshly ground pepper</li>
         <li>1pound beef stewing meat, trimmed and cut into inch cubes</li>
@@ -17,10 +27,13 @@
         <li>5medium carrots, peeled and cut into ¼-inch rounds</li>
         <li>2large baking potatoes, peeled and cut into ¾-inch cubes</li>
         <li>2teaspoons salt</li>
-    </ul>
+    </ul></p>
     <p><h3>Steps</h3></p>
-    <ol>
+    <p><ol>
         <li><strong>Step 1:</strong> Combine the flour and pepper in a bowl, add the beef and toss to coat well. Heat 3 teaspoons of the oil in a large pot. Add the beef a few pieces at a time; do not overcrowd. Cook, turning the pieces until beef is browned on all sides, about 5 minutes per batch; add more oil as needed between batches.</li>
         <li><strong>Step 2:</strong> Remove the beef from the pot and add the vinegar and wine. Cook over medium-high heat, scraping the pan with a wooden spoon to loosen any browned bits. Add the beef, beef broth and bay leaves. Bring to a boil, then reduce to a slow simmer.</li>
         <li><strong>Step 3:</strong> Cover and cook, skimming broth from time to time, until the beef is tender, about 1½ hours. Add the onions and carrots and simmer, covered, for 10 minutes. Add the potatoes and simmer until vegetables are tender, about 30 minutes more. Add broth or water if the stew is dry. Season with salt and pepper to taste. Ladle among 4 bowls and serve.</li>
-    </ol>
+    </ol></p>
+
+</body>
+</html>
