--- a/recipes/french-onion-soup.html
+++ b/recipes/french-onion-soup.html
@@ -1,10 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>French Onion Soup</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 <h1>French Onion Soup</h1>
 <img src="images/french-onion-soup.jpg">
 <p><h2>Description</h2></p>
-    <p>Before you embark on the culinary journey of crafting a comforting bowl of French onion soup, allow yourself to be transported to the cozy streetside cafes of Paris, where this timeless classic was born. French onion soup, or "Soupe à l'oignon gratinée," is a cherished emblem of French cuisine. It embodies the essence of rustic elegance, with its caramelized onions, rich beef broth, and a golden blanket of bubbling Gruyère cheese. Just the aroma of onions slowly simmering in butter can evoke a sense of warmth and nostalgia that transcends borders and generations.</p>
-    <p>This recipe will guide you through the art of transforming humble onions into a symphony of flavors. It's a journey that involves patience and a touch of culinary alchemy. The result? A soul-soothing soup that captures the essence of a French bistro in every spoonful. So, don your apron, sharpen your knife, and prepare to embark on a culinary adventure that celebrates the heartwarming essence of French onion soup.</p>
+    <p class="maintext">Before you embark on the culinary journey of crafting a comforting bowl of French onion soup, allow yourself to be transported to the cozy streetside cafes of Paris, where this timeless classic was born. French onion soup, or "Soupe à l'oignon gratinée," is a cherished emblem of French cuisine. It embodies the essence of rustic elegance, with its caramelized onions, rich beef broth, and a golden blanket of bubbling Gruyère cheese. Just the aroma of onions slowly simmering in butter can evoke a sense of warmth and nostalgia that transcends borders and generations.</p>
+    <p class="maintext">This recipe will guide you through the art of transforming humble onions into a symphony of flavors. It's a journey that involves patience and a touch of culinary alchemy. The result? A soul-soothing soup that captures the essence of a French bistro in every spoonful. So, don your apron, sharpen your knife, and prepare to embark on a culinary adventure that celebrates the heartwarming essence of French onion soup.</p>
     <p><h3>Ingredients</h3></p>
-    <ul>
+    <p><ul>
         <li>½ cup unsalted butter</li>
         <li>2 tablespoons olive oil</li>
         <li>4 cups sliced onions</li>
@@ -16,7 +26,7 @@
         <li>4 slices provolone cheese</li>
         <li>2 slices Swiss cheese, diced</li>
         <li>¼ cup grated Parmesan cheese</li>
-    </ul>
+    </ul></p>
     <p><h3>Steps</h3></p>
     <ol>
         <li><strong>Step 1: </strong>Gather all ingredients.</li>
@@ -27,3 +37,5 @@
         <li><strong>Step 6: </strong>Place bowls on a cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly, 2 to 3 minutes.</li>
         <li><strong>Step 7: </strong>Serve hot and enjoy!</li>
     </ol>
+</body>
+</html>
