--- a/recipes/ginger-beef.html
+++ b/recipes/ginger-beef.html
@@ -1,11 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ginger Beef</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
+<body>
 <h1>Stir-Fried Ginger Broccoli Beef</h1>
 <img src="images/ginger-beef.jpg">
-<p class="main"><h2>Description</h2></p>
-    <p id="main">Ginger broccoli beef is a delectable stir-fry dish that combines tender strips of beef with crisp broccoli florets, all bathed in a savory ginger-infused sauce. This dish is a harmonious fusion of flavors and textures that has become a favorite in both Chinese and Western cuisines. The key to its irresistible appeal lies in the perfect balance of ingredients.</p>
-    <p>Beyond its delicious taste, ginger broccoli beef also boasts health benefits. Ginger is renowned for its anti-inflammatory properties and digestive aids, making it a therapeutic addition to the dish. Meanwhile, broccoli is a nutritional powerhouse, packed with vitamins, fiber, and antioxidants. When combined with lean beef, it provides a balanced meal that is both indulgent and nutritious. Whether served over a bed of steamed rice or alongside noodles, ginger broccoli beef is a versatile and crowd-pleasing option, suitable for both weeknight dinners and special occasions. Its enticing aroma and the perfect interplay of flavors ensure that this dish remains a beloved classic in the world of culinary delights.</p>
+<p><h2>Description</h2></p>
+    <p class="maintext">Ginger broccoli beef is a delectable stir-fry dish that combines tender strips of beef with crisp broccoli florets, all bathed in a savory ginger-infused sauce. This dish is a harmonious fusion of flavors and textures that has become a favorite in both Chinese and Western cuisines. The key to its irresistible appeal lies in the perfect balance of ingredients.</p>
+    <p class="maintext">Beyond its delicious taste, ginger broccoli beef also boasts health benefits. Ginger is renowned for its anti-inflammatory properties and digestive aids, making it a therapeutic addition to the dish. Meanwhile, broccoli is a nutritional powerhouse, packed with vitamins, fiber, and antioxidants. When combined with lean beef, it provides a balanced meal that is both indulgent and nutritious. Whether served over a bed of steamed rice or alongside noodles, ginger broccoli beef is a versatile and crowd-pleasing option, suitable for both weeknight dinners and special occasions. Its enticing aroma and the perfect interplay of flavors ensure that this dish remains a beloved classic in the world of culinary delights.</p>
     <p><h3>Ingredients</h3></p>
     <p><ul>
         <li>7 ounces beef sirloin, sliced into strips</li>
@@ -18,10 +25,13 @@
         <li>1 (4 inch) piece ginger root, peeled and sliced</li>
         <li>14 ounces Chinese broccoli, sliced</li>
     </ul></p>
-    <ol>
+    <p><h3>Steps</h3></p>
+    <p><ol>
         <li><strong>Step 1:</strong> Toss beef strips with 1 teaspoon chicken bouillon granules and 3/4 teaspoon sugar in a bowl. Marinate in the refrigerator, 20 minutes to 1 hour.</li>
         <li><strong>Step 2:</strong> Combine remaining 1/4 teaspoon chicken bouillon granules, 1/4 teaspoon sugar, and ginger juice in a bowl.</li>
         <li><strong>Step 3:</strong> Mix 2 tablespoons water with cornstarch in a small bowl. Add to bowl with ginger juice mixture; stir.</li>
         <li><strong>Step 4:</strong> Heat 1 tablespoon oil in a wok over medium-high heat; cook and stir ginger until fragrant, about 30 seconds. Add broccoli; cook and stir for 2 minutes. Add remaining 1 tablespoon water, cover, and cook until broccoli is cooked but still crunchy, about 1 minute. Transfer to a dish.</li>
         <li><strong>Step 5:</strong> Heat remaining 1 tablespoon oil in the wok. Add beef; cook and stir to medium well doneness, about 4 minutes. Add ginger juice mixture and broccoli. Cook and stir until heated through, about 2 minutes.</li>
-    </ol>
+    </ol></p>
+    </body>
+    </html>
